<resources>
    <string name="app_name">Doom Scrolling Killer</string>
    <string name="usage_access_button">Grant Usage Access</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="stop_monitoring">Stop Monitoring</string>
    <string name="status_label">Status</string>
    <string name="status_missing_access">Usage access not granted.</string>
    <string name="status_ready">Ready to monitor.</string>
    <string name="status_monitoring">Monitoring in background.</string>
    <string name="stop_scrolling_message">Stop scrolling</string>
</resources>
